linting newInstance()