@@ -315,9 +315,9 @@ public abstract class ConnectionFactoryImpl extends BasicLogObject implements Co
 			LogFacade.getLog().info( "ConnectionFactoryImpl.newInstance() direct connection password : ******" );
 			Driver driver = null;
 			if ( cl != null ) {
-				driver = (Driver)cl.loadClass( drv ).newInstance();
+				driver = (Driver)cl.loadClass( drv ).getDeclaredConstructor().newInstance();
 			} else {
-				driver= (Driver)Class.forName( drv ).newInstance();
+				driver= (Driver)Class.forName( drv ).getDeclaredConstructor().newInstance();
 			}
 			connectionFactory = ( new DirectConnectionFactory( driver, url, usr, pwd ) );
 		} catch (Exception e) {
